--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node_modules"
   ],
   "scripts": {
-    "start": "node dist/index.cjs new rotate-demo --type ts2",
+    "start": "node dist/index.cjs add shelljs typescript --scope a -D",
     "dev": "npm run build-fast -- --watch",
     "build": "tsup src/index.ts  --clean --splitting",
     "build-fast": "npm run build -- --no-dts",
@@ -40,8 +40,7 @@
   "dependencies": {
     "cac": "^6.7.12",
     "enquirer": "^2.3.6",
-    "picocolors": "^1.0.0",
-    "shelljs": "^0.8.5"
+    "picocolors": "^1.0.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.16.1",
@@ -52,6 +51,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.8.0",
     "jest": "^27.4.7",
+    "shelljs": "^0.8.5",
     "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
     "tsup": "^5.11.13",
