--- a/src/templates/template-js/package.json
+++ b/src/templates/template-js/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "rotate add",
     "build": "rotate run build",
+    "test": "rotate test",
     "publish": "rotate publish"
   },
   "keywords": [],
@@ -17,8 +18,6 @@
   "license": "MIT",
   "packageManager": "pnpm@6.29.0",
   "devDependencies": {
-    "rotate": "@0.0.1",
-    "typescript": "^4.5.5",
-    "@types/node": "^17.0.13"
+    "rotate": "@0.0.1"
   }
 }
