--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "rotate",
-  "version": "1.0.0",
+  "name": "fmr",
+  "version": "0.0.2-beta1",
   "description": "A tool for managing JavaScript projects with multiple packages,  powered by [turborepo](https://github.com/vercel/turborepo), [pnpm](https://github.com/pnpm/pnpm) and [changesets](https://github.com/changesets/changesets).",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "bin": {
-    "tsup": "dist/index.js"
+    "fmr": "dist/index.js"
   },
   "types": "dist/index.d.ts",
   "files": [
@@ -13,9 +14,8 @@
     "node_modules"
   ],
   "scripts": {
-    "start": "node dist/index.cjs add shelljs typescript --scope a -D",
     "dev": "npm run build-fast -- --watch",
-    "build": "tsup src/index.ts  --clean --splitting",
+    "build": "tsup src/index.ts --dts --format cjs,esm",
     "build-fast": "npm run build -- --no-dts",
     "prepublishOnly": "npm run build"
   },
@@ -38,9 +38,13 @@
   "homepage": "https://github.com/WJCHumble/rotate#readme",
   "packageManager": "pnpm@6.29.0",
   "dependencies": {
+    "@changesets/cli": "^2.20.0",
     "cac": "^6.7.12",
+    "decamelize-keys": "^1.1.0",
     "enquirer": "^2.3.6",
-    "picocolors": "^1.0.0"
+    "picocolors": "^1.0.0",
+    "shelljs": "^0.8.5",
+    "turbo": "^1.1.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.16.1",
@@ -51,7 +55,6 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.8.0",
     "jest": "^27.4.7",
-    "shelljs": "^0.8.5",
     "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
     "tsup": "^5.11.13",
