--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
   "name": "fmr",
-  "version": "0.0.2-beta3",
-  "description": "A tool for managing JavaScript projects with multiple packages,  powered by [turborepo](https://github.com/vercel/turborepo), [pnpm](https://github.com/pnpm/pnpm) and [changesets](https://github.com/changesets/changesets).",
+  "version": "0.0.2-beta9",
+  "description": "A CLI that lets you experience modern monorepo project quickly and easily",
   "main": "dist/index.cjs",
   "bin": {
     "fmr": "dist/index.cjs"
   },
-  "types": "dist/index.d.ts",
   "files": [
     "dist",
     "templates",
     "node_modules"
   ],
   "scripts": {
+    "test": "fmr new monorepo",
     "start": "node dist/index.cjs new monorepo",
-    "dev": "npm run build-fast -- --watch",
-    "build": "tsup src/index.ts --dts --format cjs",
-    "build-fast": "npm run build -- --no-dts",
+    "dev": "rollup -c -w",
+    "build": "rollup -c",
     "prepublishOnly": "npm run build"
   },
-  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/WJCHumble/fmr.git"
@@ -48,6 +46,9 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.16.1",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.13",
     "@types/shelljs": "^0.8.11",
@@ -55,9 +56,10 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.8.0",
     "jest": "^27.4.7",
+    "rollup": "^2.67.0",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
-    "tsup": "^5.11.13",
     "typescript": "^4.5.5"
   }
 }
