--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14
-      - uses: pnpm/action-setup@v2
+      - run: npm i -g pnpm
       - run: pnpm install
       - uses: JS-DevTools/npm-publish@v1
         with:
